# irest

./: README.md  pyproject.toml  run.py
app/: exceptions.py  main.py
app/api/: reminders.py
app/models/: calendar.py  common.py
app/services/: reminder.py
